# Stanford

./: .gitignore  Company-Lookup.ipynb  company-lookup.py  langchain-comprehension.py  pyproject.toml  rag_sample.py  spacy_test_chatbot.py  spacy_token_generation.py  upgrade_langchain.sh
DELETE/: company-lookup.py  rag_sample.py  spacy_test_chatbot.py  upgrade_langchain.sh
docs/: conventions.md  gettingStarted.md
llm-agents/: company-lookup.py  langchain-comprehension.py  rag_sample.py  spacy_test_chatbot.py
llm_agents/: company_lookup.py  langchain_comprehension.py  multi_crew_agents.py  rag_sample.py  spacy_token_generation.py
