[tool.poetry]
name = "stanford"
version = "0.1.0"
description = ""
authors = ["William Callahan <william@williamcallahan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
openai = "^1.35.14"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.10"
aiohttp = "^3.9.5"
pypdf2 = "^3.0.1"
langchain = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
