[tool.poetry]
name = "stanford"
version = "0.1.0"
description = ""
authors = ["William Callahan <william@williamcallahan.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
jupyter = "^1.0.0"
openai = "^1.35.14"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.10"
aiohttp = "^3.9.5"
pypdf2 = "^3.0.1"
langchain = "^0.2.11"
spacy = "^3.7.5"
llama-index = "^0.10.64"
textwrap3 = "^0.9.2"
requests = "^2.32.3"
langchain-cli = "^0.0.29"
langchain-openai = "^0.1.22"
black = "^24.8.0"
crewai = "0.51.1"
duckduckgo-search = "^6.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
